--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 annotated-types==0.6.0
+BeautifulSoup4==4.10.0
 blis==0.7.11
 catalogue==2.0.10
 certifi==2023.7.22
@@ -7,9 +8,9 @@ click==8.1.7
 cloudpathlib==0.16.0
 confection==0.1.3
 cymem==2.0.8
-en-core-web-lg @ https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.7.0/en_core_web_lg-3.7.0-py3-none-any.whl
-en-core-web-md @ https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.7.0/en_core_web_md-3.7.0-py3-none-any.whl
-en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.0/en_core_web_sm-3.7.0-py3-none-any.whl
+#en-core-web-lg @ https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.7.0/en_core_web_lg-3.7.0-py3-none-any.whl
+#en-core-web-md @ https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.7.0/en_core_web_md-3.7.0-py3-none-any.whl
+#en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.0/en_core_web_sm-3.7.0-py3-none-any.whl
 icecream
 idna==3.4
 Jinja2==3.1.2
@@ -28,6 +29,7 @@ pytz==2023.3.post1
 requests==2.31.0
 scikit-learn==1.3.2
 scipy==1.11.3
+selenium
 six==1.16.0
 smart-open==6.4.0
 spacy==3.7.2
@@ -43,4 +45,5 @@ tzdata==2023.3
 urllib3==2.0.7
 wasabi==1.1.2
 weasel==0.3.3
+webdriver_manager
 PyPDF2
